--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<script type="module" src="client.js"></script>
+	<script type="module" src="sketch.js"></script>
 </body>
 
 </html>
