--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Burning Reef</title>
-	<style>
-        body {
-            overflow: hidden;
-            margin: 0px;
-        }
-    </style>
+    <title>The Burning Reef</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
