--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
 <body>
     <div id="container"></div>
+    
+    <div id="myProgress">
+        <div id="myBar"></div>
+    </div>
+
 	<script type="module" src="sketch.js"></script>
 </body>
 
