--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
     <div id="myProgress">
         <div id="myBar"></div>
     </div>
+    <div id="menu">
+        <button style="left: 11%;">prev</button>
+        <h1>Inventory</h1>
+        <h1>Artefact1</h1>
+        <img src="assets/icon.jpg">
+        <h2>Not found</h2>
+        <p>Description of artefact1</p>
+        <button>next</button>
+    </div>
+    <button id="menuOpener" onclick="openMenu()">Menu</button>
     <script type="x-shader/x-vertex" id="vertexShader">
 
         varying vec3 vWorldPosition;
-
+        //skybox gradient
         void main() {
 
             vec4 worldPosition = modelMatrix * vec4( position, 1.0 );
@@ -32,7 +42,7 @@
         uniform vec3 bottomColor;
         uniform float offset;
         uniform float exponent;
-
+        //skybox gradient
         varying vec3 vWorldPosition;
 
         void main() {
@@ -44,6 +54,7 @@
 
     </script>
 	<script type="module" src="sketch.js"></script>
+    <script src="ui.js"></script>
 </body>
 
 </html>
