--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div id="myBar"></div>
     </div>
     <div id="menu">
-        <button style="left: 11%;">prev</button>
+        <button id="menuPrev" style="left: 11%;">prev</button>
         <h1>Inventory</h1>
-        <h1>Artefact1</h1>
-        <img src="assets/icon.jpg">
-        <h2>Not found</h2>
-        <p>Description of artefact1</p>
-        <button>next</button>
+        <h1 id="title">Artefact1</h1>
+        <img id="imgurl">
+        <h2 id="state">Not found!</h2>
+        <p id="description">Description of artefact1</p>
+        <button id="menuNext">next</button>
     </div>
-    <button id="menuOpener" onclick="openMenu()">Menu</button>
+    <button id="menuOpener">Menu</button>
     <script type="x-shader/x-vertex" id="vertexShader">
 
         varying vec3 vWorldPosition;
@@ -54,7 +54,7 @@
 
     </script>
 	<script type="module" src="sketch.js"></script>
-    <script src="ui.js"></script>
+    <script type="module" src="ui.js"></script>
 </body>
 
 </html>
