ux and importing coral

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div id="myBar"></div>
     </div>
     <div id="menu">
-        <button id="menuPrev" style="left: 11%;">prev</button>
+        <img id="menuPrev"></button>
         <h1>Inventory</h1>
         <h1 id="title">Artefact1</h1>
+        <h2 id="state"></h2>
         <img id="imgurl">
-        <h2 id="state">Not found!</h2>
         <p id="description">Description of artefact1</p>
-        <button id="menuNext">next</button>
+        <img id="menuNext"></button>
     </div>
     <button id="menuOpener">Menu</button>
     <script type="x-shader/x-vertex" id="vertexShader">
