--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <div id="container"></div>
     <button id="enterButton">ENTER THE <br> BURNING REEF</button>
-    <p id="info">Use Mouse to look around, click to move
-    <br>Collect artefacts to learn about ocean degradation and prevent the death of the reef!
-    <br>Created by Alex Hopkins
+    <p id="info">Use mouse to look around, click to move.
+    <br>Collect artefacts to learn about ocean degradation and stop the end of the reef!
+    <br>Created by <a href="https://www.linkedin.com/in/ahop/" style="color: rgb(255, 255, 255);"> Alex Hopkins</a>.
     </p>
     <div id="myProgress">
         <div id="myBar"></div>
@@ -19,7 +19,6 @@
         <img id="menuPrev"></button>
         <h1>Inventory</h1>
         <h1 id="title">Artefact1</h1>
-        <h2 id="state"></h2>
         <img id="imgurl">
         <p id="description">Description of artefact1</p>
         <img id="menuNext"></button>
