added flashing to artefacts for viewability

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <p id="description">Description of artefact1</p>
         <img id="menuNext"></button>
     </div>
+
+    <div id="compass">
+        <div id="pointer"></div>
+    </div>
+
     <button id="menuOpener">MENU</button>
     <script type="x-shader/x-vertex" id="vertexShader">
 
