--- a/index.html
+++ b/index.html
@@ -16,14 +16,23 @@
         <div id="myBar"></div>
     </div>
     <div id="menu">
-        <img id="menuPrev"></button>
-        <h1>Inventory</h1>
-        <h1 id="title">Artefact1</h1>
-        <img id="imgurl">
-        <p id="description">Description of artefact1</p>
-        <img id="menuNext"></button>
+        <img id="art1" src="assets/iconNotFound.jpg" class="menuIcon">
+        <img id="art2" src="assets/iconNotFound.jpg" class="menuIcon">
+        <img id="art3" src="assets/iconNotFound.jpg" class="menuIcon">
+        <img id="art4" src="assets/iconNotFound.jpg" class="menuIcon">
+        <img id="art5" src="assets/iconNotFound.jpg" class="menuIcon">
+        <img id="art6" src="assets/iconNotFound.jpg" class="menuIcon">
+        <img id="art7" src="assets/iconNotFound.jpg" class="menuIcon">
+        <h1 id="title">Not yet Found</h1>
+        <p id="description">Discover this artefact first to learn more about its impacts and how we can help our oceans!</p>
     </div>
 
+    <div id="ending">
+        <h1>AMAZING! YOU COLLECTED <span id="collected"></span> OF THE ARTEFACTS</h1>
+        <h1></h1>
+        <p>Now</p>
+        <button id="returnButton">RETURN</button>
+    </div>
 
     <div id="compass">
         <div id="pointer"></div>
