ending half done

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
         <div id="myBar"></div>
     </div>
     <div id="menu">
-        <img id="art1" src="assets/iconNotFound.jpg" class="menuIcon">
-        <img id="art2" src="assets/iconNotFound.jpg" class="menuIcon">
-        <img id="art3" src="assets/iconNotFound.jpg" class="menuIcon">
-        <img id="art4" src="assets/iconNotFound.jpg" class="menuIcon">
-        <img id="art5" src="assets/iconNotFound.jpg" class="menuIcon">
-        <img id="art6" src="assets/iconNotFound.jpg" class="menuIcon">
-        <img id="art7" src="assets/iconNotFound.jpg" class="menuIcon">
+        <div id="icons">
+        <img id="art1" src="assets/artefacts/a1.png" class="menuIcon">
+        <img id="art2" src="assets/artefacts/a2.png" class="menuIcon">
+        <img id="art3" src="assets/artefacts/a3.png" class="menuIcon">
+        <img id="art4" src="assets/artefacts/a4.png" class="menuIcon">
+        <img id="art5" src="assets/artefacts/a5.png" class="menuIcon">
+        <img id="art6" src="assets/artefacts/a6.png" class="menuIcon">
+        <img id="art7" src="assets/artefacts/a7.png" class="menuIcon">
+        </div>
         <h1 id="title">Not yet Found</h1>
         <p id="description">Discover this artefact first to learn more about its impacts and how we can help our oceans!</p>
     </div>
@@ -36,6 +38,11 @@
 
     <div id="compass">
         <div id="pointer"></div>
+    </div>
+
+    <div id="collection">
+        <img id="colImg" src="assets/artefacts/a1.png">
+        <h1>ARTEFACT FOUND</h1>
     </div>
 
     <button id="menuOpener">MENU</button>
