--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>The Burning Reef</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -29,19 +30,12 @@
         <p id="description">Discover this artefact first to learn more about its impacts and how we can help our oceans!</p>
     </div>
 
-    <div id="ending">
-        <h1>AMAZING! YOU COLLECTED <span id="collected"></span> OF THE ARTEFACTS</h1>
-        <h1></h1>
-        <p>Now</p>
-        <button id="returnButton">RETURN</button>
-    </div>
-
     <div id="compass">
         <div id="pointer"></div>
     </div>
 
     <div id="collection">
-        <img id="colImg" src="assets/artefacts/a1.png">
+        <img id="colImg">
         <h1>ARTEFACT FOUND</h1>
     </div>
 
@@ -77,7 +71,6 @@
 
     </script>
 	<script type="module" src="sketch.js"></script>
-    <script type="module" src="ui.js"></script>
 </body>
 
 </html>
