--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container"></div>
     <button id="enterButton">ENTER THE <br> BURNING REEF</button>
     <p id="info">Use mouse to look around, click to move.
-    <br>Collect artefacts to learn about ocean degradation and stop the end of the reef!
+    <br>Follow the direction of your ARTEFACT COMPASS to collect evidence artefacts about ocean degradation and stop the end of the reef before we run out of time!
     <br>Created by <a href="https://www.linkedin.com/in/ahop/" style="color: rgb(255, 255, 255);"> Alex Hopkins</a>.
     </p>
     <div id="myProgress">
@@ -27,7 +27,7 @@
         <img id="art7" src="assets/artefacts/a7.png" class="menuIcon">
         </div>
         <h1 id="title">Not yet Found</h1>
-        <p id="description">Discover this artefact first to learn more about its impacts and how we can help our oceans!</p>
+        <p id="description">Discover this artefact first to learn more about its impacts and how we can help our oceans! <br> Try clicking the other artefact icons above, the blue ones are ones you have found!</p>
     </div>
 
     <div id="compass">
@@ -39,7 +39,7 @@
         <h1>ARTEFACT FOUND</h1>
     </div>
 
-    <button id="menuOpener">MENU</button>
+    <button id="menuOpener">ARTEFACTS</button>
 	<script type="module" src="sketch.js"></script>
 </body>
 
