--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container"></div>
     <button id="enterButton">ENTER THE <br> BURNING REEF</button>
-    <p id="info">Use mouse to look around, click to move.
+    <p id="info">Use mouse to look around, click to move. Track the degradation by the timeline at the bottom.
     <br>Follow the direction of your ARTEFACT COMPASS to collect evidence artefacts about ocean degradation and stop the end of the reef before we run out of time!
     <br>Created by <a href="https://www.linkedin.com/in/ahop/" style="color: rgb(255, 255, 255);"> Alex Hopkins</a>.
     </p>
